# specter-cloud

./: .env.example  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  devlog.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 13aa02fad936_create_telemetry_table.py  ad02ee5908dd_initial_schema_with_auth.py  c4a72f3b8d91_human_auth_rbac.py
app/: main.py
app/api/v1/: auth.py  health.py  ingest.py  stream.py
app/audit/: __init__.py  log.py
app/auth/: __init__.py  api_key.py  dependencies.py  login.py  password.py  permissions.py  rbac.py  session.py
app/core/: config.py  database.py  logging.py  middleware.py  redis.py
app/models/: __init__.py  audit_log.py  drone.py  drone_api_key.py  org.py  role.py  session.py  telemetry.py  user.py  user_role.py
app/schemas/: telemetry.py
mediamtx/: mediamtx.yml
nginx-rtmp/: nginx.conf
scripts/: bootstrap_specter_org.py  mint_key.py  revoke_key.py  simulate_drone.py
tests/: .env.test  conftest.py  test_audit_log_writer.py  test_auth_models.py  test_auth_routes.py  test_bootstrap_specter.py  test_ingest.py  test_mint_key.py  test_org_hierarchy.py  test_password.py  test_permissions.py  test_rbac.py  test_revoke_key.py  test_schemas.py  test_session.py
